# yorharch-dotfiles-manager

./: .gitignore  CMakeLists.txt  README.md
scripts/: build_win.bat
src/: main.cpp
